# HiJetson

./: .gitignore  .gitmodules  CLAUDE.md  README.md  test.ps1  write_files.ps1  write_setup.ps1  write_setup.ps1)
Changelog/: 0.9.0.md  0.9.1.md  0.9.2.md  0.9.3.md  0.9.4.md  0.9.5.md
docs/: deployment.md  design.md
scripts/: clean.sh  download_models.sh  monitor_topics.sh  run_all.sh  run_vision.sh  run_voice.sh  setup_jetson.sh
src/config/: system_params.yaml  vision_params.yaml  voice_params.yaml
src/fusion/fusion_msgs/: CMakeLists.txt  package.xml
src/fusion/fusion_msgs/msg/: FusedResult.msg
src/fusion/fusion_node/: package.xml  setup.py
src/fusion/fusion_node/fusion_node/: fusion_node.py
src/interfaces/: CMakeLists.txt
src/jetauto_app/: package.xml  setup.cfg  setup.py
src/jetauto_app/jetauto_app/: common.py  lidar_controller.py  pid.py
src/jetauto_app/launch/: lidar_controller.launch.py
src/jetauto_peripherals/: setup.py
src/launch/: hijetson_all.launch.py  hijetson_vision.launch.py  hijetson_voice.launch.py
src/vision/depth_processor/: package.xml  setup.py
src/vision/depth_processor/depth_processor/: depth_processor_node.py
src/vision/vision_msgs/: CMakeLists.txt  package.xml
src/vision/vision_msgs/msg/: Detection2D.msg  Detection2DArray.msg  VisionInfo.msg
src/voice/voice_asr/: package.xml  setup.cfg  setup.py
src/voice/voice_asr/scripts/: voice_asr_node
src/voice/voice_asr/voice_asr/: voice_asr_node.py
src/voice/voice_capture/: package.xml  setup.cfg  setup.py
src/voice/voice_capture/scripts/: voice_capture_node
src/voice/voice_capture/voice_capture/: voice_capture_node.py
src/voice/voice_feedback/: package.xml  setup.cfg  setup.py
src/voice/voice_feedback/scripts/: voice_feedback_node
src/voice/voice_feedback/voice_feedback/: voice_feedback_node.py
src/voice/voice_msgs/: CMakeLists.txt  package.xml
src/voice/voice_msgs/msg/: VoiceCommand.msg
src/voice/voice_vad/: package.xml  setup.cfg  setup.py
src/voice/voice_vad/scripts/: voice_vad_node
src/voice/voice_vad/voice_vad/: voice_vad_node.py
src/voice/voice_wake_word/: package.xml  setup.cfg  setup.py
src/voice/voice_wake_word/voice_wake_word/: voice_wake_word_node.py
