<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesvc="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_feedback</name>
  <version>0.0.1</version>
  <description>Audio feedback node - plays beeps on wake word detection and ASR result</description>
  <maintainer email="ahlijin@163.com">legend</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>